# market-making-engine

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  railway.toml  render.yaml  vercel.json
dashboard/: README.md  __init__.py
dashboard/api/: __init__.py  main.py  requirements.txt
dashboard/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
dashboard/web/src/: App.tsx  index.css  theme.ts  types.ts
data/: sample_lobster.csv  sample_session.csv
data/regimes/: calm.csv  normal.csv  volatile.csv
docs/: HOSTING.md  RENDER_DEPLOY.md
scripts/: audit_checklist.py  benchmark.py  compare_strategies.py  deploy_render.sh  deploy_vps.sh  detailed_benchmark.py  plot_backtest.py  run_baseline_backtest.py  run_dashboard_api.sh  run_lobster_backtest.py  run_stress_test.py
src/mm_engine/: __init__.py  audit.py  inventory.py  order_book.py  performance.py  types.py
src/mm_engine/backtest/: __init__.py  engine.py
src/mm_engine/feed/: __init__.py  events.py  lobster.py  replay.py
src/mm_engine/replay/: __init__.py  live_session.py  session.py  telemetry.py
src/mm_engine/reporting/: __init__.py  export.py
src/mm_engine/simulation/: __init__.py  config.py  (+3 more)
tests/: test_audit.py  test_avellaneda_stoikov.py  test_backtest.py  test_competitive_quoting.py  test_feed.py  test_inventory.py  test_order_book.py  test_order_book_synthetic.py  test_performance.py  test_replay.py  test_simulation.py  test_stress.py  test_symmetric_strategy.py  test_toxicity.py  test_volatility.py
(+86 files in other folders)
