[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-engine"
version = "0.1.0"
description = "Limit-order-book market-making simulator with Avellaneda-Stoikov quoting"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
viz = ["matplotlib>=3.8"]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "psutil>=5.9",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]